Tweak MDL styling to fix spacing issues  with checkbox and buttons

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,4 +2,9 @@
     margin: 0 auto;
     width: 500px;
 }
-
+.mdl-checkbox {
+    width: 36px;
+}
+.mdl-button {
+    margin: 0 16px;
+}
